Add requisites for JPackage to work; will need a JDK14 in jpackage/